feat: added Open API generation for NextJS client, added CORS - allowed requests from NextJS client
